# kaarmu_svea

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  entrypoint  package.xml  requirements.txt
launch/: object_detect.launch  object_viz.launch
logs/svea_core/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/svea_sensors/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr
logs/teleop_tools_msgs/: build.cmake.000.log.stderr
rviz/: zed_viz.rviz
scripts/: object_detect.py  object_pose.py
src/city_lmpc/: CMakeLists.txt  README.md  entrypoint  package.xml  setup.py
src/city_lmpc/launch/: corin.launch  geofence.launch  rsu.launch  rsu_demo.launch  sim.launch  sim2.launch  sim2_pp.launch  sml_circle.launch  state_pubber.launch  svea.launch  svea_demo.launch
src/city_lmpc/launch/legacy/: floor2.launch  path_tracker.launch  remote_rviz.launch  remote_tracker.launch
src/city_lmpc/resources/maps/: map.pgm  map.yaml
src/city_lmpc/resources/rviz/: SVEA_floor2.rviz
src/city_lmpc/scripts/: corin.py  geofence.py  outline.txt  rsu.py  rsu_demo.py  rsu_sim.py  sml_circle.py  state_pubber.py  svea_demo.py  svea_sim.py  track_sim.py
src/city_lmpc/scripts/legacy/: bicycle_tracker.py  pure_pursuit.py  track_bicycle_base.py  track_bicycle_real.py  track_bicycle_sim.py  track_frenet_base.py  track_frenet_real.py  track_frenet_sim.py  track_remote.py
src/city_lmpc/src/city_lmpc/: __init__.py  arcs.py  pure_pursuit.py  ref_generator.py  vehicle.py
src/city_lmpc/src/city_lmpc/controllers/: bicycle.py  frenet.py
src/city_lmpc/src/city_lmpc/models/: bicycle.py  frenet.py  generic.py  track.py
src/city_lmpc/src/city_lmpc/trajectories/: J_ref.npx  onc.npx
src/city_lmpc/util/: config.sh  create  create-dev  fix-python.sh  gui  open-house.rviz  rename  run
src/rsu_core/: CMakeLists.txt  README.md  package.xml  setup.py
src/rsu_core/launch/: aruco_detect.launch  object_pose.launch  zed_main.launch  zed_viz.launch
src/rsu_core/scripts/: aruco_detect.py  object_detect.py  object_pose.py  object_viz.py
src/svea_control/: CMakeLists.txt  hack.py  package.xml  setup.py
src/svea_control/launch/: sensehat.launch
src/svea_control/scripts/: sense_hat.py
src/svea_core/: CMakeLists.txt
src/svea_core/maps/: sml.pgm  sml.yaml
src/svea_core/msg/: PathSegment.msg
src/svea_core/tests/: models.test
src/svea_msgs/msg/: VehicleState.msg
src/svea_sensors/: CMakeLists.txt
src/tool/: DISCLAIMER.md
src/vehicle_msgs/: README.md
src/vehicle_msgs/carla_msgs/: CMakeLists.txt  package.xml
src/vehicle_msgs/logitech_wheel_msgs/: CMakeLists.txt  package.xml
src/vehicle_msgs/platooning_msgs/: CMakeLists.txt  package.xml
src/vehicle_msgs/rcve_msgs/: CMakeLists.txt  package.xml
src/vehicle_msgs/svea_msgs/: CMakeLists.txt
src/wp3_tests/: CMakeLists.txt  README.md  Session.vim  package.xml  setup.py
src/wp3_tests/abconn/: 2Vehs.yml  2Vehs.yml.old  2Vhs.yml
src/wp3_tests/launch/: 2VehsP2P.launch  ABConnect.launch  MasterP2P.launch  MasterServer.launch  NATS.launch  VehicleP2P.launch  VehicleServer.launch  abconnect.launch
src/wp3_tests/log/: .gitignore
src/wp3_tests/msg/: Packet.msg
src/wp3_tests/notebooks/: Decentralized Intelligence.ipynb  Plots.ipynb  analysis.ipynb  scenario analysis.ipynb  utils.py
src/wp3_tests/params/: P000.yml  P001.yml  P002.yml  P003.yml  P004.yml  P005.yml  P006.yml  P007.yml  P008.yml  P009.yml  P010.yml  P011.yml  P012.yml  P013.yml  P014.yml  P015.yml  P016.yml  P017.yml  P018.yml  P019.yml  P020.yml  P021.yml  P022.yml  P023.yml  P024.yml  P025.yml  P026.yml  P027.yml  P028.yml  P029.yml  P030.yml  P031.yml  P032.yml  P033.yml  P034.yml  P035.yml  P036.yml  P037.yml  P038.yml  P039.yml  (+35 more)
src/wp3_tests/scripts/: MasterP2P.py  MasterServer.py  Session.vim  SyncedClock.py  VehicleP2P.py  VehicleServer.py
util/: build  config.sh  create  create-dev  fix-python.sh  gui  rm  run  run-dev  start
(+4074 files in other folders)
